--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version> <!-- или актуальную версию -->
         </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
